--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   ],
   "dependencies": {
     "js-yaml": "^3.9.1",
-    "loader-utils": "^1.1.0"
+    "loader-utils": "^1.1.0",
+    "un-eval": "^1.2.0"
   }
 }
